A  +    atlases_surfaces/lh.aparc_HCP_MMP1.freesurfer.annot
        > moved from atlases_surfaces/lh.aparc_HCP-MMP1.freesurfer.annot
D       atlases_surfaces/rh.aparc_HCP-MMP1.freesurfer.annot
        > moved to atlases_surfaces/rh.aparc_HCP_MMP1.freesurfer.annot
A  +    atlases_surfaces/rh.aparc_HCP_MMP1.freesurfer.annot
        > moved from atlases_surfaces/rh.aparc_HCP-MMP1.freesurfer.annot
M       cat_conf_stools.m
M       cat_surf_render2.m
M       cat_surf_results.m
MM      internal/correct_HCP_annot.m

Fixed: Changed name for HCP-MMP1 atlas to HCP_MMP1 because "-" is not
allowd for fieldnames.

------------------------------------------------------------------------
r1169 | gaser | 2017-08-25 14:40:18 +0200 (Fr, 25 Aug 2017) | 8 lines

Changed paths:
M       CHANGES.txt
M       internal/correct_HCP_annot.m

Fixed: Changed name for HCP-MMP1 atlas to HCP_MMP1 because "-" is not
allowd for fieldnames.


------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_conf_tools.m
A  +    cat_io_volctype.m
M       cat_main.m
M       cat_main_registration.m
M       cat_surf_createCS.m
M       cat_surf_render2.m
M       cat_vol_iscaling.m
A       cat_vol_urqio.m
D       internal/cat_io_volctype.m
M       tbx_cfg_cat.m

(1) New:      Added function cat_vol_urqio to improve ultra-high resolution data
              (URQIO = Ultrahigh Resolution Quantitative Image Optimization) and
              added a GUI to control it. 
              This function is still in development!
(2) Changed:  Improved cat_io_volctype and moved it to main directory.
(3) Fixed:    Small corrections in cat_surf_render2 and cat_vol_iscaling.
(4) Changed:  Added sharpening routine for cerebellar surface reconstruction and
              increase resolution parameter.  
------------------------------------------------------------------------
r1170 | dahnke | 2017-08-30 18:58:11