@@ -1,12 +1,12 @@
 function CJV = cat_tst_CJV(P,Pp0)
 % ______________________________________________________________________
-% Function to estimate the CJV (coefficent of joint variation) in
+% Function to estimate the CJV (coefficient of joint variation) in
 % images.
 % 
 %  CJV = cat_tst_CJV(P,Pp0)
 %  
 %  P    ... set of n images (cellstr or char)
-%  Pp0  ... set of 1 (ground thruth) or n images (cellstr of char)
+%  Pp0  ... set of 1 (ground truth) or n images (cellstr of char)
 %  CJV  ... matrix of n CJV values of each image
 %
 % ______________________________________________________________________
