@@ -15236,6 +15236,7 @@ allowd for fieldnames.
 
 
 ------------------------------------------------------------------------
+r1170 | dahnke | 2017-08-30 18:59:05 +0200 (Mi, 30 Aug 2017) | 22 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -15258,5 +15259,15 @@ M       tbx_cfg_cat.m
 (3) Fixed:    Small corrections in cat_surf_render2 and cat_vol_iscaling.
 (4) Changed:  Added sharpening routine for cerebellar surface reconstruction and
               increase resolution parameter.  
+
 ------------------------------------------------------------------------
-r1170 | dahnke | 2017-08-30 18:58:11
+
+Changed paths:
+M       CHANGES.txt
+M       cat_conf_tools.m
+M       cat_surf_createCS.m
+M       cat_tst_CJV.m
+
+Fixed: Typos...
+------------------------------------------------------------------------
+r1171 | gaser | 2017-08-31 10:41:48
